fix overflow of map column

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,6 +15,12 @@ body {
 .w3-twothird.sticky {
     position: sticky;
     top: 0;
-    height: calc(100vh - 72px); /* Adjust the height according to your needs */
+    height: calc(100vh - 72px);
     overflow-y: auto;
+}
+
+#map {
+    height: calc(100% - 70px);
+    width: 100%;
+    margin: 0 auto;
 }
